# funnyvalentine

./: Cargo.toml  LICENSE  README.md
rpm/: valentine-tui.spec
src/: app.rs  main.bak  main.rs  ui.rs
